overlays/qa/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
spec:
  tls:
    - hosts:
        - qa.ice.scg.skku.ac.kr
      secretName: cs-grad-thesis-qa-tls
  rules:
    - host: qa.ice.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
